fix: Flexbox aligned solution for modal

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,27 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/* Solution */
+
+.modal {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 10px;
+  padding: 20px;
+}
+.header {
+  display: flex;
+  font-weight: 800;
+}
+.text {
+  padding-left: 50px;
+  text-align: justify;
+}
+.buttoncontainer {
+  padding-left: 50px;
+}
+.close-button {
+  margin-left: 150px;
+}
